# vigilant_archive

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  compose.yaml  index.html  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: rust.yml
migrations/2023-12-30-194118_create_characters/: up.sql
src/: app.rs  main.rs  router.rs  schema.rs
src/routes/: characters.rs  clicked.rs  hello.rs  htmx.rs  mod.rs  styles.rs
static/: styles.css
templates/: base.html  characters.html  hello.html
tests/: dependencies_test.rs
