[package]
name = "vigilant_archive"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.7.4"
diesel = { version = "2.1.4", features = ["postgres"] }
dotenvy = "0.15.7"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }

[dev-dependencies]
http-body-util = "0.1.0"
reqwest = { version = "0.11.26", features = ["blocking", "json"] }
serde = { version = "1.0.197", features = ["derive"] }
tower = "0.4.13"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-check", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"]
